# SynGuar

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  REQUIREMENTS.md  STATUS.md  docker-build.sh  docker-connect.sh  docker-run.sh  docker-stop.sh
StrSTUN-synthesizer/: CMakeLists.txt  README.txt  doxygen.conf  main.cpp  oracle.cpp
StrSTUN-synthesizer/dependencies/: .gitignore
StrSTUN-synthesizer/strstunlang/: CMakeLists.txt  debug0.txt  debug1.txt  debug2.txt  debug3.txt  debug4.txt  debug5.txt  debug6.txt  debug7.txt  debug8.txt
StrSTUN-synthesizer/strstunlang/include/: Parser.h  Parser.ih  Parserbase.h  Scanner.h  Scanner.ih  Scannerbase.h  StrSTUNEvaluator.hpp  astbase.hpp
StrSTUN-synthesizer/strstunlang/src/: Parser.y  Scanner.l  StrSTUNEvaluator.cpp  astbase.cpp  lex.cc  parse.cc
StrSTUN-synthesizer/strstunlib0/: CMakeLists.txt
StrSTUN-synthesizer/strstunlib0/include/: ComponentBuiltin.hpp  ComponentIfThenElse.hpp  ComponentInput.hpp  ComponentManager.hpp  ComponentSynthesized.hpp  Goal.hpp  GoalGraphManager.hpp  PerfCounter.hpp  Program.hpp  ProgramCodeGen.hpp  ProgramCodeParser.hpp  ProgramManager.hpp  ProgramsScore.hpp  SearcherSizeEnumeration.hpp  StrSTUNSynthesizer.hpp  ValueVector.hpp  VisitorPretty.hpp  componentbase.hpp  strstunbase.hpp  strstunvalues.hpp  visitorbase.hpp
StrSTUN-synthesizer/strstunlib0/src/: ComponentBuiltin.cpp  ComponentIfThenElse.cpp  ComponentInput.cpp  ComponentManager.cpp  ComponentSynthesized.cpp  Goal.cpp  GoalGraphManager.cpp  PerfCounter.cpp  Program.cpp  ProgramCodeGen.cpp  ProgramManager.cpp  (+9 more)
(+335 files in other folders)
